# rusty-pipes

./: Cargo.toml  io.github.dividebysandwich.rusty-pipes.yml  readme.md
.github/workflows/: rust.yml
assets/: rusty-pipes-text.desktop  rusty-pipes.desktop  rusty-pipes.icns
assets/web/: app.css  app.js  index.html
locales/: ca.yaml  cs.yaml  da.yaml  de.yaml  en.yaml  eo.yaml  es.yaml  fi.yaml  fr.yaml  ga.yaml  gd.yaml  hu.yaml  id.yaml  it.yaml  ja.yaml  ko.yaml  la.yaml  nb.yaml  nl-BE.yaml  nl.yaml  pl.yaml  pt.yaml  ro.yaml  ru.yaml  sv.yaml  tlh.yaml  uk.yaml  zh-CN.yaml  zh-TW.yaml
src/: api_config.rs  api_rest.rs  app.rs  app_state.rs  audio.rs  audio_convolver.rs  audio_event.rs  audio_loader.rs  audio_recorder.rs  config.rs  gui.rs  gui_config.rs  gui_filepicker.rs  gui_midi.rs  gui_midi_learn.rs  gui_organ_manager.rs  i18n_web.rs  input.rs  loading_ui.rs  main.rs  midi.rs  midi_control.rs  midi_recorder.rs  organ.rs  organ_grandorgue.rs  organ_hauptwerk.rs  tui.rs  tui_config.rs  tui_filepicker.rs  tui_midi.rs  tui_midi_learn.rs  tui_organ_manager.rs  voice.rs  wav.rs  wav_converter.rs
