[package]
name = "rusty-pipes"
description = "Virtual pipe organ simulator"
version = "0.3.2"
edition = "2024"

[dependencies]
anyhow = "1.0"
cpal = { version = "0.16.0", features = ["jack"] }
crossterm = "0.29"
decibel = "0.1.2"
ini = "1.3.0"
midir = "0.10"
ratatui = { version = "0.29", features = ["crossterm"] }
ringbuf = "0.4"
rubato = "0.16"
rodio = "0.21.1"
hound = "3.5.1"
byteorder = "1.5.0"
itertools = "0.14.0"
num-traits = "0.2.19"
log = "0.4"
simplelog = "0.12"
midly = "0.5"
clap = { version = "4.5", features = ["derive"] }
fft-convolver = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38", features = ["serde", "serialize"] }

[profile.release]
lto = true
