[package]
name = "rusty-pipes"
description = "Virtual pipe organ simulator"
version = "0.5.2"
license = "GPL-2.0-or-later"
authors = ["dividebysandwich"]
repository = "https://github.com/dividebysandwich/rusty-pipes"
edition = "2024"

[dependencies]
anyhow = "1.0"
cpal = { version = "0.16.0", features = ["jack"] }
crossterm = "0.29"
decibel = "0.1.2"
ini = "1.3.0"
midir = "0.10"
ratatui = { version = "0.29", features = ["crossterm"] }
ringbuf = "0.4"
rubato = "0.16"
rodio = "0.21.1"
hound = "3.5.1"
byteorder = "1.5.0"
itertools = "0.14.0"
num-traits = "0.2.19"
log = "0.4"
simplelog = "0.12"
midly = "0.5"
clap = { version = "4.5", features = ["derive"] }
fft-convolver = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38", features = ["serde", "serialize"] }
eframe = "0.33"
egui = "0.33"
rfd = "0.15"
confy = "2.0"
dirs = "6.0"
hotpath = { version = "0.5", optional = true }

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-count-total = ["hotpath/hotpath-alloc-count-total"]
hotpath-alloc-self = ["hotpath/hotpath-alloc-self"]
hotpath-off = ["hotpath/hotpath-off"]

[profile.release]
lto = true

[package.metadata.deb]
depends = "libasound2, libjack-jackd2-0, libx11-6, libxkbcommon0, libwayland-client0, libegl1, libgl1, desktop-file-utils"
assets = [
    ["assets/rusty-pipes.desktop", "/usr/share/applications/rusty-pipes.desktop", "644"],
    ["assets/rusty-pipes-text.desktop", "/usr/share/applications/rusty-pipes-text.desktop", "644"],
    ["assets/rusty-pipes.png", "/usr/share/pixmaps/rusty-pipes.png", "644"],
    ["target/release/rusty-pipes", "/usr/bin/rusty-pipes", "755"]
]

[package.metadata.bundle]
name = "Rusty Pipes"
identifier = "com.dividebysandwich.rustypipes"
icon = ["assets/rusty-pipes.icns"]
version = "0.5.2" 
copyright = "Copyright 2025 Dividebysandwich"
category = "Music"
short_description = "Virtual pipe organ simulator"
long_description = """
A MIDI-controlled virtual pipe organ simulator compatible with 
GrandOrgue and Hauptwerk sample sets.
"""